# Userfriendly

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  selfhost.env.example
.github/workflows/: deploy-server.yml  deploy-signup.yml  release-agent.yml
alembic/: env.py
alembic/versions/: 350b17be77ae_initial_schema.py  b1c2d3e4f5a6_add_timing_columns.py
docs/: STATUS.md  deploy-selfhost.md  deploy.md  design.md  distribution.md  plugins.md  roadmap.md
docs/decisions/: 0001-python-fastapi-httpx.md  0002-task-scope-enforcement.md  0003-distribution-strategy.md  0004-central-server-stack.md  0005-framework-first-plugin-architecture.md  0006-egress-policy-and-deployment-modes.md  0007-central-server-as-optional-plugin.md  0008-plugin-signing-trust-model.md  0009-allowed-modes-required-non-empty.md  0010-block-abort-plugin-field.md  0011-transform-policy.md  0012-hook-context.md  0013-plugin-disable-config.md  0014-plugins-introspection.md  0015-egress-client-sdk.md  0016-user-opt-in-env-knob.md  0017-central-server-deployment-model.md  0018-multi-tenancy-per-org-rls.md  0019-mode-taxonomy-retired-content-level-kept.md  0020-auth-per-org-token-anthropic-passthrough.md  0021-retire-plugin-manifest-signing.md  0022-deployment-platform-fly-supabase.md  0023-server-auth-header-rename.md  0024-agent-fallback-fail-closed.md  0025-agent-language-python-cli.md  0026-hookcontext-response-accessors.md  0027-exchange-row-close-out-policy.md  0028-extractor-faithful-response-reassembly.md  0029-consent-data-handling.md  0030-scope-guard-plugin.md  0031-scope-guard-gemini-provider.md  0032-conversation-messages-dedup.md  0033-plugin-analytics-no-rls.md  0034-thin-agent-github-releases.md  0035-thin-agent-uv-tool-install.md  0036-canonical-conversation-grouping.md  0037-display-role-vocab-split.md  0038-per-exchange-turn-delta.md  0039-restore-reconstruction-view.md  0040-scan-past-wrapper-messages-for-grouping-hash.md  (+4 more)
docs/experiments/: README.md
docs/worklog/: 2026-05-03-phase0-skeleton.md  2026-05-04-phase1a-sdk.md  2026-05-05-phase1b-security.md  (+53 more)
scripts/: pg-backup.sh
tests/: test_plugin_host.py
(+33 files in other folders)
