[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-tracker"
version = "0.0.1"
description = "Local sidecar proxy that observes and (optionally) intervenes in Claude Code's LLM API traffic."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Userfriendly Team" }]
license = { text = "Proprietary (internal research use)" }

# Runtime dependencies are intentionally left empty at project bootstrap.
# Phase 0 work will pin these — see docs/roadmap.md.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
]

[project.scripts]
# Will be wired up in Phase 0 once the CLI module exists.
# llm-tracker = "llm_tracker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_tracker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
