[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-tracker"
version = "0.0.1"
description = "Local sidecar proxy that observes and (optionally) intervenes in Claude Code's LLM API traffic."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Userfriendly Team" }]
license = { text = "Proprietary (internal research use)" }

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx[http2]",
    "pydantic",
    "pydantic-settings",
    "structlog",
    "typer",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "alembic",
    "python-ulid",
    "keyring",
    "pynacl",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "respx",
    "ruff",
    "mypy",
]

[project.scripts]
llm-tracker = "llm_tracker.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_tracker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
